samples/_failures_safe/1761440613_7d8820_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0c70502b.c: In function ‘main’:
./samples/SAFE/__tmp_0c70502b.c:152:5: error: expected expression at end of input
  152 |     if (!decompress_rle(compressed.data, compressed.size,
      |     ^~
./samples/SAFE/__tmp_0c70502b.c:152:5: error: expected declaration or statement at end of input
